[package]
name = "katana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4" , features = ["derive"]}
ninja-build-syntax = {path = "ninja-build-syntax"}

[workspace]

members = [
    "ninja-build-syntax",
]
